# gestures

./: .gitignore  README.md
MercuryGestures/: .gitignore  ActivityGraph.cpp  ActivityGraph.h  CMakeLists.txt  EdgeDetector.cpp  EdgeDetector.h  FaceDetector.cpp  FaceDetector.h  Hand.cpp  HandDetector.cpp  HandDetector.h  LHClassifier.xml  MercuryCore.h  MercuryGestures.cbp  MercuryGestures.layout  MercuryGestures.sln  MercuryGestures.vcxproj  MercuryGestures.vcxproj.filters  MovementDetector.cpp  MovementDetector.h  SemanticDetector.cpp  SemanticDetector.h  SkinDetector.cpp  SkinDetector.h  main.cpp  old.cpp  test.yml  util.cpp
MercuryGestures/Debug/: vc140.idb
MercuryGestures/Release/: MercuryGestures.iobj  MercuryGestures.ipdb
MercuryGestures/data/: help
MercuryGestures/data/createdData/: StaticHandsUp00.mp4Generated0.yml  StaticHandsUp00.mp4Generated10.yml  StaticHandsUp00.mp4Generated103.yml  StaticHandsUp00.mp4Generated104.yml  StaticHandsUp00.mp4Generated105.yml  StaticHandsUp00.mp4Generated106.yml  StaticHandsUp00.mp4Generated108.yml  StaticHandsUp00.mp4Generated11.yml  StaticHandsUp00.mp4Generated116.yml  StaticHandsUp00.mp4Generated118.yml  StaticHandsUp00.mp4Generated121.yml  StaticHandsUp00.mp4Generated123.yml  StaticHandsUp00.mp4Generated124.yml  StaticHandsUp00.mp4Generated125.yml  StaticHandsUp00.mp4Generated129.yml  StaticHandsUp00.mp4Generated131.yml  StaticHandsUp00.mp4Generated135.yml  StaticHandsUp00.mp4Generated138.yml  StaticHandsUp00.mp4Generated143.yml  StaticHandsUp00.mp4Generated145.yml  StaticHandsUp00.mp4Generated146.yml  StaticHandsUp00.mp4Generated147.yml  StaticHandsUp00.mp4Generated148.yml  StaticHandsUp00.mp4Generated152.yml  StaticHandsUp00.mp4Generated16.yml  StaticHandsUp00.mp4Generated161.yml  StaticHandsUp00.mp4Generated163.yml  StaticHandsUp00.mp4Generated168.yml  StaticHandsUp00.mp4Generated171.yml  StaticHandsUp00.mp4Generated175.yml  StaticHandsUp00.mp4Generated179.yml  StaticHandsUp00.mp4Generated180.yml  StaticHandsUp00.mp4Generated182.yml  StaticHandsUp00.mp4Generated193.yml  StaticHandsUp00.mp4Generated196.yml  StaticHandsUp00.mp4Generated198.yml  StaticHandsUp00.mp4Generated2.yml  StaticHandsUp00.mp4Generated203.yml  StaticHandsUp00.mp4Generated208.yml  StaticHandsUp00.mp4Generated211.yml  (+4918 more)
MercuryGestures/data/mixedData/: LHShake00.mp4.yml  LHShake01.mp4.yml  LHShake04.mp4.yml  LHShake05.mp4.yml  LHShake07.mp4.yml  LHShake08.mp4.yml  LHShake09.mp4.yml  LHShake10.mp4.yml  LHShake11.mp4.yml
MercuryGestures/data/negativeData/: StaticHandsUp00.mp4Generated100.yml  StaticHandsUp00.mp4Generated101.yml  StaticHandsUp00.mp4Generated102.yml  StaticHandsUp00.mp4Generated107.yml  StaticHandsUp00.mp4Generated110.yml  StaticHandsUp00.mp4Generated112.yml  StaticHandsUp00.mp4Generated113.yml  StaticHandsUp00.mp4Generated114.yml  StaticHandsUp00.mp4Generated117.yml  StaticHandsUp00.mp4Generated120.yml  StaticHandsUp00.mp4Generated126.yml  StaticHandsUp00.mp4Generated128.yml  StaticHandsUp00.mp4Generated13.yml  StaticHandsUp00.mp4Generated132.yml  StaticHandsUp00.mp4Generated136.yml  StaticHandsUp00.mp4Generated137.yml  StaticHandsUp00.mp4Generated139.yml  StaticHandsUp00.mp4Generated142.yml  StaticHandsUp00.mp4Generated144.yml  StaticHandsUp00.mp4Generated149.yml  StaticHandsUp00.mp4Generated15.yml  StaticHandsUp00.mp4Generated153.yml  StaticHandsUp00.mp4Generated155.yml  StaticHandsUp00.mp4Generated157.yml  StaticHandsUp00.mp4Generated164.yml  StaticHandsUp00.mp4Generated166.yml  StaticHandsUp00.mp4Generated170.yml  StaticHandsUp00.mp4Generated172.yml  StaticHandsUp00.mp4Generated185.yml  StaticHandsUp00.mp4Generated186.yml  (+69914 more)
(+120394 files in other folders)
